# Penteract-Placer

./: .gitignore  .gitmodules  5D-Miner.rc  5D-Miner.sln  5D-Miner.vcxproj  5D-Miner.vcxproj.filters  Block.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Directory.cpp  Directory.h  File.cpp  File.h  Framebuffer.cpp  Framebuffer.h  GPUBuffer.cpp  GPUBuffer.h  MashPool.h  Math5D.cpp  Math5D.h  QuadRenderer.cpp  QuadRenderer.h  QuadRendererBasic.h  README.md  Shader.cpp  Shader.h  State.h  StateControls.cpp  StateCreateWorld.cpp  StateCreateWorld.h  StateGame.cpp  StateGame.h  StateGeneratingWorld.cpp  StateGeneratingWorld.h  StateLoadWorld.cpp  StateLoadWorld.h  StateManager.cpp  StateManager.h  StateTitleScreen.cpp  (+23 more)
assets/shaders/: quad.frag  quad.vert  renderer.frag  renderer.vert  tex.frag  text.frag  text.geom  text.vert
assets/textures/blocks/: bricks.ndtf  dirt.ndtf  glass.ndtf  grassSide.ndtf  grassTop.ndtf  stone.ndtf  water.ndtf  woodSide.ndtf  woodTop.ndtf
cmake/: dev.tr1ngle.pp.desktop
include/: Block.h  Chunk.h  Directory.h  File.h  OpenSimplexNoise.hpp  QuadRenderer.h  QuadRendererBasic.h  Shader.h  State.h  StateControls.h  StateCreateWorld.h  StateGeneratingWorld.h  StateLoadWorld.h  StateManager.h  StateTitleScreen.h  TextRenderer.h  TextureBuffer.h  audio.h  utils.h  vec5.h  vec6.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: egl.h  gl.h  glx.h
libs/glad/src/: egl.c
libs/ndtf/libs/: deflatestatic.lib  ndtf-debug.lib  ndtf.lib
src/: Chunk.cpp  Framebuffer.cpp  GPUBuffer.cpp  Math5D.cpp  QuadRenderer.cpp  QuadRendererBasic.cpp  Shader.cpp  StateControls.cpp  StateGame.cpp  StateGeneratingWorld.cpp  StateLoadWorld.cpp  StateManager.cpp  Texture.cpp  World.cpp  audio.cpp  icon.rc  main.cpp  ui.cpp
